src/test/deca/context/invalid/created/declVar2.deca
// Resultats:
//    Erreur contextuelle
//    Error: Multiple declaration of a, first declaration at [6, 8]

{
    int a;
    int a;
}